<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gradient_background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:textSize="45sp"
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:text="@string/app_name"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_button"
                android:text="@string/viaemail"
                style="@style/AppTheme.RoundedCornerMaterialButton" />

            <Button
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone_button"
                android:text="@string/viaphone"
                style="@style/AppTheme.RoundedCornerMaterialButton" />
        </LinearLayout>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                app:mtf_cardCollapsedHeight="1dp"
                app:mtf_labelColor="@color/colorAccent"
                app:mtf_image="@drawable/email"
                android:id="@+id/enterEmail">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"
                    android:textColor="#34495e"
                    android:textSize="15sp"/>

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="290dp"
                app:mtf_cardCollapsedHeight="1dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:mtf_labelColor="@color/colorAccent"
                app:mtf_image="@drawable/password"
                android:layout_marginBottom="10dp"
                android:id="@+id/enterPassword">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Password"
                    android:textColor="#34495e"
                    android:inputType="textPassword"/>

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:visibility="gone"
                android:id="@+id/enterPhone"
                android:layout_width="300dp"
                app:mtf_cardCollapsedHeight="1dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:mtf_labelColor="@color/colorAccent"
                app:mtf_image="@drawable/smartphone"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Phone Number"
                    android:textColor="#34495e"
                    android:inputType="number"/>

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:visibility="gone"
                android:id="@+id/enterOTP"
                android:layout_width="300dp"
                app:mtf_cardCollapsedHeight="1dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:mtf_labelColor="@color/colorAccent"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter OTP"
                    android:textColor="#34495e"
                    android:inputType="number"/>

            </com.github.florent37.materialtextfield.MaterialTextField>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_button"
                    android:text="@string/login"
                    style="@style/AppTheme.RoundedCornerMaterialButton" />

                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_button"
                    android:text="@string/send"
                    style="@style/AppTheme.RoundedCornerMaterialButton" />

                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/verify_button"
                    android:text="@string/verify"
                    style="@style/AppTheme.RoundedCornerMaterialButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot"
                    style="@style/fonts"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    style="@style/fonts"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/fonts"
                    android:text="@string/register_now"
                    android:clickable="true"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>